--- a/main.html
+++ b/main.html
@@ -14,4 +14,20 @@
 
 </body>
 
+</html><!DOCTYPE html>
+
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<button type="submit" id="btn" class="joinBtn" value="submit">Submit</button>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
 </html>
